--- a/Android/Java/app/src/main/res/values/strings.xml
+++ b/Android/Java/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
-    <string name="app_name">Sample Java Android</string>
+    <string name="app_name">Spatial Anchors</string>
     <string name="title_activity_aractive">ARActive</string>
 </resources>
